fixed navigation and page spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,59 @@
-@media (max-width:500px){
-        h1 {
+@media (max-width:680px){
+        .siteTitle {
+            transform:translate(0px,180px);
+        }
+
+        .outerBody {
             transform:translate(0px,150px);
         }
 
         div#links{
-            transform:translate(0px,0px);
+            transform:translate(-5px,0px);
         }
+
+        .sidenav {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: #111;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+        }
+        .sidenav a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            transition: 0.3s
+        }
+
+        .sidenav a:hover, .offcanvas a:focus{
+            color: #f1f1f1;
+        }
+
+        .sidenav .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
+
+    }
+
+    @media (min-width: 681px) {
+        
+        .openBtn{
+            display: none;
+        }
+
+        .closeBtn{
+            display: none;
+        }
+        
     }
